--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -10,10 +10,6 @@
   top: 100%;
 }
 
-.shopify-section-header-sticky .mega-menu__content {
-  max-height: calc(100vh - var(--header-bottom-position-desktop, 20rem) - 4rem);
-}
-
 .header-wrapper--border-bottom .mega-menu__content {
   border-top: 0;
 }
@@ -22,60 +18,30 @@
   transition: opacity 100ms linear, transform 100ms linear;
   opacity: 0;
   transform: translateY(-100%);
-  z-index: 0;
+  z-index: -1;
 }
 
-.mega-menu[open] .mega-menu__content,
-.mega-menu.is-closing .mega-menu__content,
-.mega-menu.is-opening .mega-menu__content{
+.mega-menu.open .mega-menu__content {
   display: block;
 }
 
-.mega-menu[open] .mega-menu__content {
+.mega-menu.open .mega-menu__content {
   opacity: 1;
   transform: translateY(0);
 }
 
-.mega-menu__list {
-  display: grid;
-  gap: 1.8rem 4rem;
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-  list-style: none;
+.mega-menu.open summary::After {
+  content:'';
+  position: absolute;
+  top: -15px;
+  left: -15px;
+  right: -15px;
+  bottom: -15px;
 }
 
-.mega-menu__link {
-  display: block;
-  line-height: calc(1 + 0.3 / var(--font-body-scale));
-  padding-bottom: 0.6rem;
-  padding-top: 0.6rem;
-  text-decoration: none;
-  transition: text-decoration var(--duration-short) ease;
-  word-wrap: break-word;
-}
-
-.mega-menu__link--level-2 {
-  font-weight: bold;
-}
-
-.header--top-center .mega-menu__list {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  column-gap: 0;
-}
-
-.header--top-center .mega-menu__list > li {
-  width: 16%;
-  padding-right: 2.4rem;
-}
-
-.mega-menu__link:hover,
-.mega-menu__link--active {
-  text-decoration: underline;
-}
-
-.mega-menu__link--active:hover {
-  text-decoration-thickness: 0.2rem;
+.mega-menu.open summary::after,
+.mega-menu[open] summary::after {
+  bottom: -30px;
 }
 
 .mega-menu .mega-menu__list--condensed {
