--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1049,24 +1049,12 @@ body .shopify-policy__body {
   inset: 0rem;
 }
 
-.left-8 {
-  left: 2rem;
-}
-
 .right-3 {
   right: 0.75rem;
 }
 
-.right-8 {
-  right: 2rem;
-}
-
 .top-0 {
   top: 0rem;
-}
-
-.top-1\/2 {
-  top: 50%;
 }
 
 .top-3 {
@@ -1077,16 +1065,8 @@ body .shopify-policy__body {
   top: var(--header-height);
 }
 
-.isolate {
-  isolation: isolate;
-}
-
 .z-10 {
   z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
 }
 
 .z-30 {
@@ -1120,6 +1100,10 @@ body .shopify-policy__body {
   margin-bottom: 1.5em;
 }
 
+.-mb-5 {
+  margin-bottom: -1.25rem;
+}
+
 .mb-15 {
   margin-bottom: 3.75rem;
 }
@@ -1146,6 +1130,10 @@ body .shopify-policy__body {
 
 .mb-9 {
   margin-bottom: 2.25rem;
+}
+
+.mb-gutter {
+  margin-bottom: 10px;
 }
 
 .mb-text-line {
@@ -1196,36 +1184,12 @@ body .shopify-policy__body {
   margin-top: 2.25rem;
 }
 
-.mt-\[10px\] {
+.mt-gutter {
   margin-top: 10px;
 }
 
 .mt-text-line {
   margin-top: 1.5em;
-}
-
-.mb-gutter {
-  margin-bottom: 10px;
-}
-
-.mt-gutter {
-  margin-top: 10px;
-}
-
-.-mb-4 {
-  margin-bottom: -1rem;
-}
-
-.-mb-5 {
-  margin-bottom: -1.25rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
 }
 
 .block {
@@ -1260,12 +1224,16 @@ body .shopify-policy__body {
   display: none;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-20 {
   height: 5rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-\[100vh\] {
@@ -1280,16 +1248,8 @@ body .shopify-policy__body {
   height: var(--header-height);
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-4 {
-  height: 1rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-20 {
@@ -1300,48 +1260,20 @@ body .shopify-policy__body {
   width: 6.25rem;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
 .w-3 {
   width: 0.75rem;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
-.w-100 {
-  width: 25rem;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
-}
-
-.w-5-per {
-  width: 5%;
-}
-
-.w-10-per {
-  width: 10%;
-}
-
-.w-1\/2 {
-  width: 50%;
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-\[calc\(50\%-5px\)\] {
   width: calc(50% - 5px);
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-screen-lg {
@@ -1376,16 +1308,6 @@ body .shopify-policy__body {
   border-collapse: collapse;
 }
 
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-180 {
-  --tw-rotate: -180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1417,10 +1339,6 @@ body .shopify-policy__body {
 
 .snap-normal {
   scroll-snap-stop: normal;
-}
-
-.snap-always {
-  scroll-snap-stop: always;
 }
 
 .list-none {
@@ -1522,16 +1440,16 @@ body .shopify-policy__body {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-25 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(6.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(6.25rem * var(--tw-space-y-reverse));
-}
-
 .space-x-gutter > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(10px * var(--tw-space-x-reverse));
   margin-left: calc(10px * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-25 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(6.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(6.25rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -1630,12 +1548,24 @@ body .shopify-policy__body {
   padding-bottom: 1rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pb-3 {
   padding-bottom: 0.75rem;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .pb-\[0\.375rem\] {
   padding-bottom: 0.375rem;
+}
+
+.pb-text-line {
+  padding-bottom: 1.5em;
 }
 
 .pt-13 {
@@ -1654,20 +1584,8 @@ body .shopify-policy__body {
   padding-top: 0.5rem;
 }
 
-.pb-text-line {
-  padding-bottom: 1.5em;
-}
-
-.pr-gutter {
-  padding-right: 10px;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
@@ -1727,10 +1645,6 @@ body .shopify-policy__body {
 
 .outline-1 {
   outline-width: 1px;
-}
-
-.outline-offset-1 {
-  outline-offset: 1px;
 }
 
 .outline-offset-2 {
@@ -1911,24 +1825,24 @@ body .shopify-pc__prefs__header-actions button {
     display: none;
   }
 
-  .sm\:h-4 {
-    height: 1rem;
-  }
-
   .sm\:h-15 {
     height: 3.75rem;
   }
 
-  .sm\:w-\[9\.375rem\] {
-    width: 9.375rem;
+  .sm\:h-4 {
+    height: 1rem;
+  }
+
+  .sm\:w-15 {
+    width: 3.75rem;
   }
 
   .sm\:w-4 {
     width: 1rem;
   }
 
-  .sm\:w-15 {
-    width: 3.75rem;
+  .sm\:w-\[9\.375rem\] {
+    width: 9.375rem;
   }
 
   .sm\:grid-cols-12 {
@@ -1969,12 +1883,12 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-start: 2;
   }
 
-  .md\:col-start-3 {
-    grid-column-start: 3;
-  }
-
   .md\:col-start-4 {
     grid-column-start: 4;
+  }
+
+  .md\:col-start-5 {
+    grid-column-start: 5;
   }
 
   .md\:col-start-9 {
@@ -1985,16 +1899,12 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-start: 17;
   }
 
-  .md\:col-start-5 {
-    grid-column-start: 5;
-  }
-
   .md\:col-end-13 {
     grid-column-end: 13;
   }
 
-  .md\:col-end-3 {
-    grid-column-end: 3;
+  .md\:col-end-5 {
+    grid-column-end: 5;
   }
 
   .md\:col-end-6 {
@@ -2005,12 +1915,8 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-end: 16;
   }
 
-  .md\:col-end-4 {
-    grid-column-end: 4;
-  }
-
-  .md\:col-end-5 {
-    grid-column-end: 5;
+  .md\:mb-0 {
+    margin-bottom: 0rem;
   }
 
   .md\:mb-20 {
@@ -2037,10 +1943,6 @@ body .shopify-pc__prefs__header-actions button {
     margin-top: 2.25rem;
   }
 
-  .md\:mb-0 {
-    margin-bottom: 0rem;
-  }
-
   .md\:block {
     display: block;
   }
@@ -2061,32 +1963,8 @@ body .shopify-pc__prefs__header-actions button {
     display: none;
   }
 
-  .md\:h-25 {
-    height: 6.25rem;
-  }
-
-  .md\:h-5 {
-    height: 1.25rem;
-  }
-
-  .md\:h-20 {
-    height: 5rem;
-  }
-
   .md\:w-35 {
     width: 8.75rem;
-  }
-
-  .md\:w-25 {
-    width: 6.25rem;
-  }
-
-  .md\:w-5 {
-    width: 1.25rem;
-  }
-
-  .md\:w-20 {
-    width: 5rem;
   }
 
   .md\:w-auto {
@@ -2125,19 +2003,13 @@ body .shopify-pc__prefs__header-actions button {
     gap: 10px;
   }
 
-  .md\:gap-y-0 {
-    row-gap: 0rem;
-  }
-
   .md\:gap-x-gutter {
     -moz-column-gap: 10px;
          column-gap: 10px;
   }
 
-  .md\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  .md\:gap-y-0 {
+    row-gap: 0rem;
   }
 
   .md\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
@@ -2146,8 +2018,22 @@ body .shopify-pc__prefs__header-actions button {
     margin-left: calc(0rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:pb-0 {
+    padding-bottom: 0rem;
+  }
+
   .md\:pb-1 {
     padding-bottom: 0.25rem;
+  }
+
+  .md\:pr-0 {
+    padding-right: 0rem;
   }
 
   .md\:pt-15 {
@@ -2160,14 +2046,6 @@ body .shopify-pc__prefs__header-actions button {
 
   .md\:pt-\[5vw\] {
     padding-top: 5vw;
-  }
-
-  .md\:pr-0 {
-    padding-right: 0rem;
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0rem;
   }
 }
 
@@ -2188,12 +2066,16 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-start: 3;
   }
 
+  .lg\:col-start-4 {
+    grid-column-start: 4;
+  }
+
   .lg\:col-start-5 {
     grid-column-start: 5;
   }
 
-  .lg\:col-start-4 {
-    grid-column-start: 4;
+  .lg\:col-end-4 {
+    grid-column-end: 4;
   }
 
   .lg\:col-end-7 {
@@ -2202,14 +2084,6 @@ body .shopify-pc__prefs__header-actions button {
 
   .lg\:col-end-9 {
     grid-column-end: 9;
-  }
-
-  .lg\:col-end-3 {
-    grid-column-end: 3;
-  }
-
-  .lg\:col-end-4 {
-    grid-column-end: 4;
   }
 
   .lg\:mb-35 {
@@ -2224,28 +2098,16 @@ body .shopify-pc__prefs__header-actions button {
     display: none;
   }
 
-  .lg\:h-25 {
-    height: 6.25rem;
-  }
-
   .lg\:h-5 {
     height: 1.25rem;
   }
 
-  .lg\:w-25 {
-    width: 6.25rem;
-  }
-
-  .lg\:w-5-per {
-    width: 5%;
-  }
-
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
   .lg\:w-5 {
     width: 1.25rem;
+  }
+
+  .lg\:grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-6 {
@@ -2264,10 +2126,6 @@ body .shopify-pc__prefs__header-actions button {
     grid-column-start: 3;
   }
 
-  .xl\:col-start-4 {
-    grid-column-start: 4;
-  }
-
   .xl\:col-end-3 {
     grid-column-end: 3;
   }
@@ -2278,9 +2136,5 @@ body .shopify-pc__prefs__header-actions button {
 
   .xl\:w-25 {
     width: 6.25rem;
-  }
-
-  .xl\:w-5-per {
-    width: 5%;
   }
 }
