--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -10,9 +10,9 @@
 
 <details-modal class="header__search">
   <details>
-    <summary class="header__icon header__icon--search header__icon--summary link focus-inset modal__toggle" aria-haspopup="dialog" aria-label="{{ 'general.search.search' | t }}">
+    <summary class="link focus-inset modal__toggle" aria-haspopup="dialog" aria-label="{{ 'general.search.search' | t }}">
       <span>
-        <span class="modal__toggle-open icon icon-search" aria-hidden="true" focusable="false">
+        <span class="modal__toggle-open" aria-hidden="true" focusable="false">
           {{ 'general.search.search' | t }}
         </span>
         <svg class="modal__toggle-close icon icon-close" aria-hidden="true" focusable="false">
