--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -11,7 +11,7 @@
                 class="relative header__menu-item list-menu__item link focus-inset uppercase hover:underline"
               >
                 <span
-                  {%- if link.current or link.active or link.child_active %}
+                  {%- if link.active or link.child_active %}
                     class="underline"
                   {% endif %}
                 >
@@ -46,7 +46,7 @@
                               <a
                                 id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}-{{ grandchildlink.handle }}"
                                 href="{{ grandchildlink.url }}"
-                                class="mega-menu__link text-link link{% if grandchildlink.current %} nav-link-current{% endif %}"
+                                class="mega-menu__link text-link link{% if grandchildlink.active %} nav-link-current{% endif %}"
                                 {% if grandchildlink.current %}
                                   aria-current="page"
                                 {% endif %}
