--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -31,13 +31,7 @@
   {% endcapture %}
 {% endif %}
 
-{%- if product.tags contains 'final sale' -%}
-  {%- capture money_price -%}
-    {{ money_price }}&nbsp;&nbsp;<span class="uppercase">&nbsp;(Final Sale)</span>
-  {%- endcapture -%}
-{%- endif -%}
-
-<div class="price
+<div class="price inline-block
   {%- if price_class %} {{ price_class }}{% endif -%}
   {%- if available == false %} price--sold-out {% endif -%}
   {%- if compare_at_price > price %} price--on-sale {% endif -%}
