--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1349,6 +1349,10 @@ body .shopify-policy__body {
   grid-auto-flow: dense;
 }
 
+.grid-flow-row-dense {
+  grid-auto-flow: row dense;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
