--- a/sections/homepage-items.liquid
+++ b/sections/homepage-items.liquid
@@ -1,5 +1,5 @@
 <div class="homepage-items block relative mb-6 md:mb-9">
-  <div class="homepage-items__images padding-x pt-13 md:pt-15 grid grid-cols-6 md:grid-cols-24 grid-flow-dense gap-y-40 md:gap-y-0 gap-x-gutter">
+  <div class="homepage-items__images padding-x pt-13 md:pt-15 grid grid-cols-6 md:grid-cols-24 grid-flow-row-dense gap-y-40 md:gap-y-0 gap-x-gutter">
     {% for block in section.blocks %}
       {% capture sizes %}(min-width: 768px) {{ block.settings.desktop_width }}vw, {{ block.settings.mobile_width }}vw{% endcapture %}
 
@@ -26,7 +26,7 @@
           @media screen and (min-width: 768px) {
             .homepage-items__block[data-index="{{ forloop.index }}"] {
               grid-column: {% if block.settings.desktop_col_start > 0 %}{{ block.settings.desktop_col_start }}{% else %}auto{% endif %} / span {{ block.settings.desktop_col_span | at_most: desktop_span_max }};
-              grid-row: {% if block.settings.desktop_row_start > 0 %}{{ block.settings.desktop_row_start }}{% else %}auto{% endif %} / span 6;
+              margin-top: {{ block.settings.desktop_margin_top }}%
             }
           }
         </style>
@@ -52,7 +52,6 @@
 {
   "name": "Homepage Items",
   "tag": "section",
-  "max_blocks": 9,
   "enabled_on": {
     "templates": [
       "index"
@@ -82,15 +81,6 @@
         },
         {
           "type": "range",
-          "id": "desktop_row_start",
-          "label": "Desktop Row Start",
-          "min": 0,
-          "max": 35,
-          "step": 1,
-          "default": 0
-        },
-        {
-          "type": "range",
           "id": "desktop_col_start",
           "label": "Desktop Column Start",
           "min": 0,
@@ -106,6 +96,16 @@
           "max": 10,
           "step": 1,
           "default": 8
+        },
+        {
+          "type": "range",
+          "id": "desktop_margin_top",
+          "label": "Desktop Margin Top",
+          "min": -10,
+          "max": 190,
+          "step": 2,
+          "unit": "%",
+          "default": 0
         },
         {
           "type": "range",
